style: fix button styling by ensuring width, background color, and text alignment are set

--- a/02-html-css-selectors-flexbox/style.css
+++ b/02-html-css-selectors-flexbox/style.css
@@ -43,5 +43,7 @@ body {
 }
 
 .presentation__links__buttons {
-    
+    width: 280px;
+    background-color: #22D4FD;
+    text-align: center;   
 }
